--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -17,9 +17,9 @@
             <table id="datatable" class="table table-striped table-bordered text-responsive" cellspacing="0" width="100%">
                 <thead>
                 <tr>
-                    <th class="text-center"><i class="fa fa-fw fa-lg fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
-                    <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i><span class="hidden-xs">Jugador</span></th>
-                    <th class="text-center"><i class="fa fa-fw fa-lg fa-question-circle"></i><span class="hidden-xs">Asunto</span></th>
+                    <th class="text-center"><i class="fa fa-fw fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
+                    <th class="text-center"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Jugador</span></th>
+                    <th class="text-center"><i class="fa fa-fw fa-question-circle"></i><span class="hidden-xs">Asunto</span></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -36,7 +36,7 @@
             {% else %}
                 {% for i in 0..text['content']|length - 1 %}
             <div class="col-xs-12 col-md-{{ text['content'][i]['length'] }} col-md-offset-{{ text['content'][i]['offset'] }} alert alert-{{ text['content'][i]['class'] }} text-{{ text['content'][i]['align'] }} text-responsive" role="alert">
-                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i>{{ text['content'][i]['text'] }}
+                <i class="fa fa-fw fa-exclamation-triangle"></i>{{ text['content'][i]['text'] }}
             </div>
                 {% endfor %}
             <div class="col-xs-12 col-md-6 col-md-offset-3">
