--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -12,11 +12,11 @@
             <table id="datatable" class="table table-striped table-bordered text-responsive" cellspacing="0" width="100%">
                 <thead>
                     <tr>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-list-ol"></i><span class="hidden-xs">Posición</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-rocket"></i><span class="hidden-xs">Poder</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i><span class="hidden-xs">Nick</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-globe"></i><span class="hidden-xs">Tierras</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-shield"></i><span class="hidden-xs">Fortalezas</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-list-ol"></i><span class="hidden-xs">Posición</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-rocket"></i><span class="hidden-xs">Poder</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Nick</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-globe"></i><span class="hidden-xs">Tierras</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-shield"></i><span class="hidden-xs">Fortalezas</span></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -25,8 +25,8 @@
                         <td class="text-right">{{ random(10)|nf }}</td>
                         <td class="text-right">{{ player.power|nf }}</td>
                         <td class="text-center"><span class="label label-{{ player.faction.class }}"><a href="{{ path('archmage_game_account_profile', { 'player': player.nick } ) }}" class="link">{{ player.nick }}</a></span></td>
-                        <td class="text-right">{{ player.building('Tierras').quantity|nf }}</td>
-                        <td class="text-right">{{ player.building('Fortalezas').quantity|nf }}</td>
+                        <td class="text-right">{{ player.lands|nf }}</td>
+                        <td class="text-right">{{ player.construction('Fortalezas').quantity|nf }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
