--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-md-6 col-md-offset-3">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cogs"></i>Opciones</div>
+                            <div class="panel-heading text-center"><i class="fa fa-fw fa-cogs"></i>Opciones</div>
                             <div class="panel-body text-center">
                                 <div class="row">
                                     <div class="col-xs-12">
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                             <div class="panel-footer text-center">
-                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Atacar</button>
+                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i>Atacar</button>
                             </div>
                         </div>
                     </div>
@@ -75,8 +75,8 @@
                         {% for troop in player.troops if troop.quantity > 0 %}
                         <div class="row">
                             <div class="col-xs-12">
-                                <div class="panel panel-default">
-                                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
+                                <div class="panel panel-{{ troop.unit.faction.class }}">
+                                    <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
                                     <div class="panel-body text-responsive">
                                         <div class="row">
                                             <div class="col-xs-4">
@@ -118,7 +118,7 @@
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="panel panel-{{ contract.hero.faction.class }}">
-                                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></div>
+                                    <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></div>
                                     <div class="panel-body text-responsive">
                                         <div class="row">
                                             <div class="col-xs-4">
