--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -13,7 +13,7 @@
         {% for troop in player.troops if troop.quantity > 0 %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ troop.unit.faction.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -37,7 +37,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if troop.quantity <= 0%}disabled{% endif %}><i class="fa fa-fw fa-lg fa-user-times"></i><span class="hidden-xs">Desbandar</span></button>
+                                    <button type="submit" class="btn btn-default" {% if troop.quantity <= 0%}disabled{% endif %}><i class="fa fa-fw fa-user-times"></i><span class="hidden-xs">Desbandar</span></button>
                                 </div>
                                 <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="{{ troop.quantity }}" value="0" {% if troop.quantity <= 0 %}disabled{% endif %} required />
                                 <input type="hidden" id="troop" name="troop" value="{{ troop.id }}" {% if troop.quantity <= 0 %}disabled{% endif %} required />
@@ -51,7 +51,7 @@
         {% else %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger text-center" role="alert">
-                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-lg fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> algunas.
+                <i class="fa fa-fw fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> algunas.
             </div>
         </div>
         {% endfor %}
