--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -13,7 +13,7 @@
         {% for troop in player.troops if troop.unit.faction.name == 'Neutral' %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}] ({{ troop.unit.goldRecruit|nf }}<i class="fa fa-fw fa-lg fa-money"></i>)</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}] ({{ troop.unit.goldRecruit|nf }}<i class="fa fa-fw fa-money"></i>)</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -37,7 +37,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Reclutar</span></button>
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Reclutar</span></button>
                                 </div>
                                 <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="" value="0" required />
                                 <input type="hidden" id="troop" name="troop" value="{{ troop.id }}" required />
