--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -23,6 +23,7 @@
                 <div class="panel-heading text-center">Batalla</div>
                 <div class="panel-body text-center text-responsive text-only">
                     <div class="row">
+                        {# row #}
                         <div class="col-xs-12 col-md-offset-1 col-md-5">
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/factions.png') }}">
                             <div class="caption">
@@ -30,6 +31,7 @@
                                 Cada facción tiene una opuesta y aumentará su daño en combate un 25% contra ella. Así, si un <span class="label label-danger">Caos</span> atacase a un <span class="label label-primary">Sagrado</span> u <span class="label label-warning">Oscuridad</span>, su bonus sería del 0%; si atacase a un <span class="label label-success">Naturaleza</span> o <span class="label label-default">Neutral</span>, del +25%; y si atacase a un <span class="label label-info">Fantasmal</span>, -25%.
                             </div>
                         </div>
+                        {# row #}
                         <div class="col-xs-12 col-md-5">
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/units.png') }}">
                             <div class="caption">
@@ -61,11 +63,12 @@
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-rebel"></i>{{ faction.name }}</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
+                        {# row #}
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset(faction.image) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12 text-lore"><small><i><i class="fa fa-fw fa-quote-left"></i> {{ faction.lore }} <i class="fa fa-fw fa-quote-right"></i></i></small></div>
+                            <div class="col-xs-12"><small><i>"{{ faction.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -91,6 +94,7 @@
                             <img class="custom-thumbnail" src="{{ asset( building.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
+                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldCost|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleCost|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaCost|nf }}</div>
@@ -131,6 +135,7 @@
                             <img class="custom-thumbnail" src="{{ asset( unit.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
+                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i>{{ unit.attack|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ unit.defense|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ unit.speed }}</div>
@@ -142,7 +147,7 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ unit.family.name }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ unit.type.name }}</div>
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i><i class="fa fa-fw fa-quote-left"></i> {{ unit.lore }} <i class="fa fa-fw fa-quote-right"></i></i></small></div>
+                            <div class="col-xs-12"><small><i>"{{ unit.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -168,11 +173,12 @@
                             <img class="custom-thumbnail" src="{{ asset( hero.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
+                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ hero.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ hero.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ hero.manaMaintenance|nf }}</div>
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i><i class="fa fa-fw fa-quote-left"></i> {{ hero.lore }} <i class="fa fa-fw fa-quote-right"></i></i></small></div>
+                            <div class="col-xs-12"><small><i>"{{ hero.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -191,13 +197,14 @@
         {% for spell in spells %}
         <div class="col-xs-12 col-md-6"><a name="{{ spell.name|slug }}"></a>
             <div class="panel panel-{{ spell.faction.class }}">
-                <div class="panel-heading text-center">{% if spell.enchant %}<i class="fa fa-fw fa-lg fa-link"></i>{% else %}<i class="fa fa-fw fa-lg fa-magic"></i>{% endif %}{{ spell.name }}</div>
+                <div class="panel-heading text-center">{% if spell.enchant %}<i class="fa fa-fw fa-link"></i>{% else %}<i class="fa fa-fw fa-magic"></i>{% endif %}{{ spell.name }}</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( spell.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
+                            {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ spell.magic|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ spell.manaCost|nf }}</div>
                             {# row #}
@@ -210,12 +217,12 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ spell.manaMaintenance|nf }}</div>
                             {% endif %}
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i><i class="fa fa-fw fa-quote-left"></i> {{ spell.lore }} <i class="fa fa-fw fa-quote-right"></i></i></small></div>
+                            <div class="col-xs-12"><small><i>"{{ spell.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
                 <div class="panel-footer text-center text-responsive">
-                    <i class="fa fa-fw fa-lg fa-joomla"></i>{{ spell.skill.description|raw }}
+                    <i class="fa fa-fw fa-joomla"></i>{{ spell.skill.description|raw }}
                 </div>
             </div>
         </div>
@@ -229,16 +236,17 @@
         {% for artifact in artifacts %}
         <div class="col-xs-12 col-md-6"><a name="{{ artifact.name|slug }}"></a>
             <div class="panel panel-{{ artifact.faction.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-joomla"></i>{{ artifact.name }}</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i>{{ artifact.name }}</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( artifact.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
+                            {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ artifact.skill.description|raw }}</div>
                             {# row #}
-                            <div class="col-xs-12 text-lore"><small><i><i class="fa fa-fw fa-quote-left"></i> {{ artifact.lore }} <i class="fa fa-fw fa-quote-right"></i></i></small></div>
+                            <div class="col-xs-12"><small><i>"{{ artifact.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
