--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -14,7 +14,7 @@
             {% if auction.contract is not null and not player.hasContract(auction.contract) %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ auction.contract.hero.faction.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.contract.hero.name|slug }}" class="link">{{ auction.contract.hero.name }}</a></div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.contract.hero.name|slug }}" class="link">{{ auction.contract.hero.name }}</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -35,7 +35,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %}><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Pujar</span></button>
+                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %}><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Pujar</span></button>
                                 </div>
                                 <input type="number" class="form-control" id="bid" name="bid" min="{{ (auction.bid * 1.1)|round }}" max="{{ player.gold }}" value="{{ (auction.bid * 1.1)|round }}" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %} required />
                                 <input type="hidden" id="auction" name="auction" value="{{ auction.id }}" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %} required />
@@ -50,7 +50,7 @@
             {% elseif auction.research is not null and not player.hasResearch(auction.research) %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ auction.research.spell.faction.class }}">
-                <div class="panel-heading text-center">{% if auction.research.spell.enchant %}<i class="fa fa-fw fa-lg fa-link"></i>{% else %}<i class="fa fa-fw fa-lg fa-magic"></i>{% endif %}<a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.research.spell.name|slug }}" class="link">{{ auction.research.spell.name }}</a></div>
+                <div class="panel-heading text-center">{% if auction.research.spell.enchant %}<i class="fa fa-fw fa-link"></i>{% else %}<i class="fa fa-fw fa-magic"></i>{% endif %}<a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.research.spell.name|slug }}" class="link">{{ auction.research.spell.name }}</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -79,7 +79,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %}><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Pujar</span></button>
+                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %}><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Pujar</span></button>
                                 </div>
                                 <input type="number" class="form-control" id="bid" name="bid" min="{{ (auction.bid * 1.1)|round }}" max="{{ player.gold }}" value="{{ (auction.bid * 1.1)|round }}" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %} required />
                                 <input type="hidden" id="auction" name="auction" value="{{ auction.id }}" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %} required />
@@ -94,7 +94,7 @@
             {% elseif auction.troop is not null %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ auction.troop.unit.faction.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-users"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.troop.unit.name|slug }}" class="link">{{ auction.troop.unit.name }}</a> [{{ auction.troop.quantity|nf }}]</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-users"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.troop.unit.name|slug }}" class="link">{{ auction.troop.unit.name }}</a> [{{ auction.troop.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -122,7 +122,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %}><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Pujar</span></button>
+                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %}><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Pujar</span></button>
                                 </div>
                                 <input type="number" class="form-control" id="bid" name="bid" min="{{ (auction.bid * 1.1)|round }}" max="{{ player.gold }}" value="{{ (auction.bid * 1.1)|round }}" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %} required />
                                 <input type="hidden" id="auction" name="auction" value="{{ auction.id }}" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %} required />
@@ -137,7 +137,7 @@
             {% elseif auction.item is not null %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ auction.item.artifact.faction.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}#{{ auction.item.artifact.name|slug }}" class="link">{{ auction.item.artifact.name }}</a> [1]</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ auction.item.artifact.name|slug }}" class="link">{{ auction.item.artifact.name }}</a> [1]</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -153,7 +153,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %}><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Pujar</span></button>
+                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %}><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Pujar</span></button>
                                 </div>
                                 <input type="number" class="form-control" id="bid" name="bid" min="{{ (auction.bid * 1.1)|round }}" max="{{ player.gold }}" value="{{ (auction.bid * 1.1)|round }}" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %} required />
                                 <input type="hidden" id="auction" name="auction" value="{{ auction.id }}" {% if auction.player is defined and auction.player == player or auction.bid > player.gold %}disabled{% endif %} required />
