--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -10,7 +10,7 @@
                 <h1><i class="fa fa-fw fa-tint"></i>Cargar maná<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-tint"></i>{{ player.mana|nf }} / {{ player.manaCap|nf }}</div>
+                <div class="panel-heading text-center">{{ player.mana|nf }} / {{ player.manaCap|nf }} Maná en tu reino</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
