--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -13,7 +13,7 @@
         {% for enchantment in player.enchantments %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-link"></i><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-link"></i><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -28,7 +28,7 @@
                     <form id="enchantment{{ enchantment.id }}" name="enchantment{{ enchantment.id }}" class="form-inline" action="{{ path('archmage_game_magic_dispell') }}" method="post" role="form">
                         <div class="form-group has-feedback">
                             <div class="input-group">
-                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-chain-broken"></i>Desencantar</button>
+                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-chain-broken"></i>Desencantar</button>
                                 <input type="hidden" id="enchantment" name="enchantment" value="{{ enchantment.id }}" required />
                             </div>
                         </div>
@@ -40,7 +40,7 @@
         {% if player.enchantments is empty and player.curses is empty %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger text-center" role="alert">
-                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes encantamientos en tu reino, amigos o enemigos. Tal vez deberías <i class="fa fa-fw fa-lg fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
+                <i class="fa fa-fw fa-exclamation-triangle"></i> Actualmente no tienes encantamientos en tu reino, amigos o enemigos. Tal vez deberías <i class="fa fa-fw fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
             </div>
         </div>
         {% endif %}
