--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -17,7 +17,7 @@
         <div class="col-xs-12 col-md-6">
             {% endif %}
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-home"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> [{{ construction.quantity|nf }}]</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-home"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> [{{ construction.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -51,16 +51,16 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if player.building('Tierras').quantity <= 0%}disabled{% endif %}><i class="fa fa-fw fa-lg fa-wrench"></i><span class="hidden-xs">Construir</span></button>
+                                    <button type="submit" class="btn btn-default" {% if player.construction('Tierras').quantity <= 0%}disabled{% endif %}><i class="fa fa-fw fa-wrench"></i><span class="hidden-xs">Construir</span></button>
                                 </div>
-                                <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ player.building('Tierras').quantity }}" value="0" {% if player.building('Tierras').quantity <= 0 %}disabled{% endif %} required />
-                                <input type="hidden" id="construction" name="construction" value="{{ construction.id }}" {% if player.building('Tierras').quantity <= 0 %}disabled{% endif %} required />
+                                <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ player.construction('Tierras').quantity }}" value="0" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %} required />
+                                <input type="hidden" id="construction" name="construction" value="{{ construction.id }}" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %} required />
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
                     </form>
                     {% else %}
-                        <a class="btn btn-default" href="{{ path( 'archmage_game_territory_explore' ) }}"><i class="fa fa-fw fa-lg fa-search"></i><span class="hidden-xs">Explorar</span></a>
+                        <a class="btn btn-default" href="{{ path( 'archmage_game_territory_explore' ) }}"><i class="fa fa-fw fa-search"></i><span class="hidden-xs">Explorar</span></a>
                     {% endif %}
                 </div>
             </div>
