Nuevo lore en todos las entidades relevantes con texto estilado acorde. Mejorado twigextension numberformat.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -43,6 +43,11 @@ img.background {
 .text-only {
     padding: 15px;
 }
+.text-lore {
+    text-align: right;
+    margin-top: 4px;
+    color: #cc7c26;
+}
 @media screen and (max-width: 400px) {
     .text-responsive {
         font-size:9px !important;
