--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,7 +34,7 @@
     <div class="container">
         {% for type, flashMessages in app.session.flashbag.all() %}
             {% for flashMessage in flashMessages %}
-        <div class="col-xs-12 alert alert-{{ type }} alert-dismissable text-responsive text-center" role="alert">
+        <div class="col-xs-12 alert alert-{{ type }} alert-dismissable text-center" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
             {# |raw para que pase por el controlador codigos html como <a href>, sino los trunca #}
             <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> {{ flashMessage|raw }}
