--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -96,6 +96,8 @@
                                                 <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.unit.type.name }}</a></div>
                                                 {# row #}
                                                 <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
+                                                {# row #}
+                                                <div class="col-xs-12 text-lore"><small><i>"{{ troop.unit.lore }}"</i></small></div>
                                             </div>
                                         </div>
                                     </div>
@@ -129,6 +131,8 @@
                                                 <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ contract.hero.goldMaintenance|nf }}</div>
                                                 <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ contract.hero.manaMaintenance|nf }}</div>
                                                 <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ contract.hero.peopleMaintenance|nf }}</div>
+                                                {# row #}
+                                                <div class="col-xs-12 text-lore"><small><i>"{{ contract.hero.lore }}"</i></small></div>
                                             </div>
                                         </div>
                                     </div>
