--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -10,7 +10,7 @@
                 <h1><i class="fa fa-fw fa-user-times"></i>Desbandar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
         </div>
-        {% for troop in player.troops if troop.quantity > 0 %}
+        {% for troop in player.troops if troop.quantity > 0 and troop.unit.peoplemaintenance <= 0%}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ troop.unit.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
@@ -20,15 +20,21 @@
                             <img class="custom-thumbnail" src="{{ asset( troop.unit.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
+                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i>{{ troop.unit.attack|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ troop.unit.defense|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed|nf }}</div>
+                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.manaMaintenance|nf }}</div>
+                            {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ troop.unit.family.name }}</a></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.unit.type.name }}</a></div>
+                            {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
+                            {# row #}
+                            <div class="col-xs-12 text-lore"><small><i>"{{ troop.unit.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
