--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -68,7 +68,10 @@
                             <img class="custom-thumbnail" src="{{ asset(faction.image) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12"><small><i>"{{ faction.lore }}"</i></small></div>
+                            {# row #}
+                            <div class="col-xs-12">{{ faction.description }}</div>
+                            {# row #}
+                            <div class="col-xs-12 text-lore"><small><i>"{{ faction.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -110,6 +113,8 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaMaintenance|nf }}</div>
+                            {# row #}
+                            <div class="col-xs-12 text-lore"><small><i>"{{ building.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -147,7 +152,7 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ unit.family.name }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ unit.type.name }}</div>
                             {# row #}
-                            <div class="col-xs-12"><small><i>"{{ unit.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>"{{ unit.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -178,7 +183,7 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ hero.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ hero.manaMaintenance|nf }}</div>
                             {# row #}
-                            <div class="col-xs-12"><small><i>"{{ hero.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>"{{ hero.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -217,7 +222,7 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ spell.manaMaintenance|nf }}</div>
                             {% endif %}
                             {# row #}
-                            <div class="col-xs-12"><small><i>"{{ spell.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>"{{ spell.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
@@ -246,7 +251,7 @@
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ artifact.skill.description|raw }}</div>
                             {# row #}
-                            <div class="col-xs-12"><small><i>"{{ artifact.lore }}"</i></small></div>
+                            <div class="col-xs-12 text-lore"><small><i>"{{ artifact.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
