--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -13,14 +13,17 @@
         {% for item in player.items if item.quantity > 0 %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}" class="link">{{ item.artifact.name }}</a> [{{ item.quantity|nf }}]</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}" class="link">{{ item.artifact.name }}</a> [{{ item.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( item.artifact.image ) }}">
                         </div>
-                        <div class="col-xs-8">
-                            <p><i class="fa fa-fw fa-joomla"></i>{{ item.artifact.description|raw }}</p>
+                        <div class="col-xs-8 text-padded">
+                            {# row #}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ item.artifact.skill.description|raw }}</div>
+                            {# row #}
+                            <div class="col-xs-12 text-lore"><small><i>"{{ item.artifact.lore }}"</i></small></div>
                         </div>
                     </div>
                 </div>
