Nuevo controlador como servicio que engloba number format, mantenimientos y flasbag notices. Nuevos mantenimientos de heroes. Mejoras en controladores con los nuevos servicios de number format. Ahora las tropas desbandadas a 0 son destruidas del array y se crean si contrata una nueva.

--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -89,13 +89,13 @@
                                                 <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed|nf }}</div>
                                                 {# row #}
                                                 <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}</div>
-                                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.peopleMaintenance|nf }}</div>
-                                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.manaMaintenance|nf }}</div>
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ troop.unit.peopleMaintenance|nf }}</div>
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ troop.unit.manaMaintenance|nf }}</div>
                                                 {# row #}
                                                 <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ troop.unit.family.name }}</a></div>
                                                 <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.unit.type.name }}</a></div>
                                                 {# row #}
-                                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
+                                                {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
                                                 {# row #}
                                                 <div class="col-xs-12 text-lore"><small><i>"{{ troop.unit.lore }}"</i></small></div>
                                             </div>
@@ -129,8 +129,8 @@
                                             <div class="col-xs-8 text-padded">
                                                 {# row #}
                                                 <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ contract.hero.goldMaintenance|nf }}</div>
-                                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ contract.hero.manaMaintenance|nf }}</div>
                                                 <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ contract.hero.peopleMaintenance|nf }}</div>
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ contract.hero.manaMaintenance|nf }}</div>
                                                 {# row #}
                                                 <div class="col-xs-12 text-lore"><small><i>"{{ contract.hero.lore }}"</i></small></div>
                                             </div>
