--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -117,7 +117,7 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ auction.troop.unit.family.name }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ auction.troop.unit.type.name }}</div>
                             {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{% if auction.troop.unit.skill is not null %}{{ auction.troop.unit.skill.description|raw }}{% else %}Ninguna{% endif %}</div>
+                            {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{% if auction.troop.unit.skill is not null %}{{ auction.troop.unit.skill.description|raw }}{% else %}Ninguna{% endif %}</div> #}
                             {# row #}
                             <div class="col-xs-12 text-lore"><small><i>"{{ auction.troop.unit.lore }}"</i></small></div>
                         </div>
