--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -22,10 +22,9 @@
                         <div class="col-xs-8 text-padded">
                             {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ research.spell.magic|nf }}</div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ research.spell.manaCost|nf }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ (research.spell.manaCost * player.magic)|nf }}</div>
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ research.turns|nf }}</div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ research.spell.turnsResearch|nf }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ research.spell.turnsCost|nf }}</div>
                             {% if research.spell.enchant %}
                             {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ research.spell.goldMaintenance|nf }}</div>
